Fix: Remove margin and padding causing page to overflow

--- a/frontend/src/components/loginPage/LoginPage.css
+++ b/frontend/src/components/loginPage/LoginPage.css
@@ -3,9 +3,7 @@
     flex-direction: column;
     align-items: center;
     margin: auto;
-    margin-top: 3%;
     background: #ffffff;
-    padding-bottom: 3%;
     font-size: 8px;
     width: 60%;
     border-radius: 3px;
